--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 <div style="width:500px; height=350px">
-![](images/alex.jpg)
+![](images/mainpage.jpg)
 </div>
 
 University of Alberta University | 
