finished univariate analyses

--- a/index.Rmd
+++ b/index.Rmd
@@ -37,8 +37,8 @@ Ecologists are generally expected to know a larger range of statistics relative 
 Time   | Goal
 -------|------------
 2:00   | Meet & greet. Test software
-2:10  | [Analysis Fundamentals]
-2:45  | [Univariate Stats]
+2:10  | [Analysis Fundamentals](Analysis.Fundamental//index.html)
+2:45  | [Univariate Stats](Univariate//index.html)
 3:30  | *coffee break*
 3:45 | [Multivariate Stats]
 4:30  | [Indices in Ecology]
