--- a/Analysis.Fundamental/Intro.rmd
+++ b/Analysis.Fundamental/Intro.rmd
@@ -1,7 +1,7 @@
 ---
-title: Introduction to Git and Version Control
+title: Introduction to data analysis
 author: "Alex Filazzola"
-date: "June 18 2017"
+date: "Nov 6 2018"
 output:
   html_document:
     theme: sandstone
