--- a/index.Rmd
+++ b/index.Rmd
@@ -37,11 +37,12 @@ Ecologists are generally expected to know a larger range of statistics relative 
 Time   | Goal
 -------|------------
 2:00   | Meet & greet. Test software
-2:10  | [Analysis Fundamentals](Analysis.Fundamental//index.html)
+2:05  | [Analysis Fundamentals](Analysis.Fundamental//index.html)
 2:45  | [Univariate Stats](Univariate//index.html)
-3:30  | *coffee break*
-3:45 | [Multivariate analyses](Indices//indices.html)
-4:30  | [Bonus]
+3:15  | *coffee break*
+3:30 | [Multivariate analyses](Indices//indices.html)
+4:15 | [Ordinations](Ordinations//ordinations.html)
+4:45  | De-brief
 
 
 ## Software
