--- a/Ordinations/ordinations.Rmd
+++ b/Ordinations/ordinations.Rmd
@@ -81,9 +81,31 @@ Our number is in between suggesting that both linear and unimodal approximations
 
 Illustration of the rule how to select whether to use linear ordination methods (like PCA or RDA) or unimodal (CA, DCA or CCA) on the data. Upper diagram shows simulated community structured by a single environmental gradient, with number of species response curves. The diagram below shows the relationship between the length of the gradient sampled in the simulated community on the //x/-axis (in arbitrary units), and length of the first DCA ordination axies (in units of S.D.). The dataset which according to DCA is rather homogeneous (< 3 S.D.) has environmental gradient up to 2000 units long; the longer gradient results into heterogeneous dataset for which linear methods are not suitable. [OP of figure  & caption](https://www.davidzeleny.net/anadat-r/doku.php/en:ordination)
 
+### 4.2 Testing the gradient
+
+There are two common uses of an ordination. The first is to observe trends in the similarities among sites and species. The second is to utilize the data reduction technique to correlate the gradient among species and sites to other gradients. 
+
+We are going to load the `varechem` and `varespec` datasets from `vegan`. We then extract the scores from the ordination and compare them to environmental variables. 
+
+```{r}
+data(varechem)
+data(varespec)
+
+## transform data
+species <- decostand(varespec, method="hellinger")
+
+## create ordination
+pca <- rda(species)
+
+## extract the scores from the ordination
+score.vals <- scores(pca)$sites
+
+## compare 
+cor(score.vals, varechem)
+```
 
 
-### 4.2 Redundancy analysis
+### 4.3 Redundancy analysis
 
 Finally let's do a contrained ordination, RDA. A constrained ordination is a direct graident analysis because you suggesting what the composition of the components are that describe the data. Instead of the PC1 representing the x-axis, we will have RDA1 that is a combination of the predictor variables that we include. We can take a look at what this means. 
 
@@ -91,11 +113,8 @@ Finally let's do a contrained ordination, RDA. A constrained ordination is a dir
 ## load soil chem variables
 data(varechem)
 
-## select only most important soil nutrients
-nutrients <- varechem[1:20,c("N","P","K","Ca","Mg")]
-
 ## conduct RDA
-rda <- rda(dune.hell, nutrients)
+rda <- rda(species, varechem)
 
 ## output
 rda
@@ -105,10 +124,97 @@ anova(rda)
 plot(rda)
 ```
 
-There are two quick ways to determine if the RDA accurately describes the data. The key word in RDA is redundancy, implying that your gradient is essentially described twice. Once by the species data and once by the environmental variables. The more similar those describe the same trend, the greater redundancy and the better the ordination. Here, the eigenvalues for the constrained axes are about 75% of the unconstrained values that suggests there is some degree of redundancy, which is good. When we conduct a permutation test on the RDA we find no significance. 
+There are two quick ways to determine if the RDA accurately describes the data. The key word in RDA is redundancy, implying that your gradient is essentially described twice. Once by the species data and once by the environmental variables. The more similar those describe the same trend, the greater redundancy and the better the ordination. Here, the eigenvalues for the constrained axes are about 40% of the unconstrained values that suggests there is some degree of redundancy, which is good. When we conduct a permutation test on the RDA we find no significance. 
 
-The p value being close to 0.05 and the relatively high level of redundancy suggest that these nutrient variables are not accurately explaining all the variation in our dataset. When we look at the plot, we can see that RDA1 is comprised mostly of the nutrients. This suggest that RDA2 might be better describe with some additional variables that are not soil nutrients. This could improve our RDA fit and make it valid. As it stands now though, we cannot present this. 
+The p value being close to 0.05 and the relatively high level of redundancy suggest that these nutrient variables are not accurately explaining all the variation in our dataset. When we look at the plot, we can see that RDA1 is comprised mostly of the metals. RDA2 instead appears to be described by other nutrients such as nitrogen and phosphorus. As it stands now though, we cannot present this dataset because of the poor explanation of variation and high p.value. 
 
-### 3.6 Indiciator species analysis
+### 4.4 Cluster Analysis revisited
+
+A cluster analysis groups together different sites or plots, typically by dissimiliarity. One of the more widely accepted methods is using the squared version of Ward's method. Ward's method uses a minimum variance criterion that minimizes the total within-cluster variance (see for more  [Murtagh and Legendre 2014](https://link.springer.com/article/10.1007/s00357-014-9161-z)). 
+
+We again calculate dissimiliarity indices using the Bray-Curtis method. On our initial plotting, it can be seen that are two general catgorizations of the sites. We can cut this dendrogram into separate groups either arbitrary based on the number of groups or by the height of the dendrogram. 
+
+```{r}
+
+## calculate distances
+dis <- vegdist(species, method="bray")
+
+## cluster analysis
+clus <- hclust(dis, "ward.D2")
+
+## plot cluster
+plot(clus)
+
+## cut the tree based on a specific height
+grp <- cutree(clus, h=0.7)
+
+## cut the tree into four clusters
+grp <- cutree(clus, 4)
+
+```
+
+We can plot the dendrogram to be more aesthetically pleasing using the `cluster` and `factoextra` packages. Although this is not necessary. Here we can clearly highlight the clustered groups that we generated. We can also use the function cophenetic to estimate the dissimilarity from the tree based on all the points. 
+```{r warning=FALSE, message=FALSE}
+library(cluster)
+library(factoextra)
+
+fviz_dend(clus, k = 4, # Cut in four groups
+          cex = 0.7, cex.axis=2,  # label size
+          color_labels_by_k = TRUE, # color labels by groups
+          rect = TRUE # Add rectangle around groups
+          ) 
+
+## Function cophenetic finds this estimated dissimilarity from a tree for evey pair of points. 
+cor(dis, cophenetic(clus))
+
+```
+
+The next question is do these cluster map on to a treatment or measured variate. We can compare the clustered groups against different environmental variables. Let's compare the measured nitrogen against the groups that were generated. We can also common parametric analyses, such as ANOVAs, to determine if there are statistical differences among the groups. 
+
+```{r}
+## Compare environmental variables to cluster groups
+boxplot(varechem$N ~ grp)
+
+## Statistically compare groups
+m1 <- aov(varechem$N ~ grp)
+summary(m1)
+
+```
+
+Finally, if these clusters make sense ecologically, are statistically different, and answering a research question, it makes sense to plot these clusters on the ordination. These ordinations can be added using the `ordiellipse` function and can be used to determine the species that belong in the clusters. 
+
+```{r}
+## conduct ordination
+ord <- rda(species)
+
+## calculate priority
+spp.priority <- colSums(species)
+
+## plot ordination with clusters
+plot(ord, type="n")
+ordiellipse(ord, grp, lty = 2, col = "grey80", draw="polygon", alpha=150)
+orditorp(ord, display = "species", cex = 0.7, col = "darkorange3", priority=spp.priority, air=0.8)
+orditorp(ord, display = "sites", cex = 0.7, col = "darkslateblue", air=0.1)
+
+```
+
+### 4.5 Indiciator species analysis
+
+Indicator species analysis explores statistical significance between particular groups. It is a particularly relevant follow up for ordinations to determine the key species that are driving differences in composition between groups. It can also identify unique species assembalges that are present in a group. 
+
+```{r}
+library(indicspecies)
+
+data(dune.env)
+
+## Compare species assemblages among manure levels
+indval <- multipatt(dune, dune.env$Manure, control=how(nperm=999))
+summary(indval)
 
 
+## Compare species assemblages among management strategies
+indval2 <- multipatt(dune, dune.env$Management, control=how(nperm=999))
+summary(indval2)
+```
+
+Here we can see that the addition of manure results in the presence of two additional species that when manure is missing. Similarly, the different management strategies each form unique assemblages. 
